changes Sushi to Japanese

--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -38,7 +38,7 @@
           <option value="American">American</option>
           <option value="Indian">Indian</option>
           <option value="Thai">Thai</option>
-          <option value="Sushi">Sushi</option>
+          <option value="Japanese">Japanese</option>
           <option value="Pizza">Pizza</option>
           <option value="Albanian" selected>Albanian</option>
           <option value="Mexican">Mexican</option>
