--- a/views/partials/message.handlebars
+++ b/views/partials/message.handlebars
@@ -1,12 +1,3 @@
-<div class='container'>
-
-  <div class="card-title d-flex justify-content-center card-body git  text-light  ">
-    <h3>Message Board</h3>
-  </div><br>
-
-    <div class='col-md-4  text-light'>
-      <h5>Messages</h>
-
       {{#if displayMessages}}
       {{#each displayMessages as |message|}}
       <div class='card mb-3'>
@@ -20,13 +11,13 @@
               data-bs-target='#reply'
               data-bs-whatever='{{message.sender.id}}'
             >Reply to {{message.sender.name}}</button> <br>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profileModal{{message.sender.id}}">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profileModal">
   View {{message.sender.name}}'s Profile
 </button>   
 </div>    
       </div><br>
 
-<div class="modal fade" id="profileModal{{message.sender.id}}" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
+<div class="modal fade" id="profileModal" tabindex="-1" aria-labelledby="profileModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -39,7 +30,7 @@
       </div>
       <div class="modal-body message">
         <p class='card-text'><strong>{{message.sender.name}}</strong></p>
-                   <p class='card-text'><strong>Location:</strong> {{message.sender.location}}</p>
+                   <p class='card-text'><strong>Location:</strong> {{message.sender.bio}}</p>
             <p class='card-text'><strong>Gender:</strong> {{message.sender.gender}}</p>
             <p class='card-text'><strong>Zodiac Sign:</strong>
               {{message.sender.zodiac}}</p>
@@ -99,11 +90,3 @@
       {{else}}
       <p>No messages yet.</p>
       {{/if}}
-
-<style>
-  body {
-    background-color: #C68CD9;
-  }
-</style>
-
-<script src="/js/message-board.js"></script>
