--- a/views/message-board.handlebars
+++ b/views/message-board.handlebars
@@ -17,7 +17,7 @@
               type='button'
               class='btn btn-primary'
               data-bs-toggle='modal'
-              data-bs-target='#reply'
+              data-bs-target='#reply{{message.sender.id}}'
               data-bs-whatever='{{message.sender.id}}'
             >Reply to {{message.sender.name}}</button> <br>
         <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profileModal{{message.sender.id}}">
@@ -51,16 +51,17 @@
     </div>
   </div>
 </div>
+<p id="fromID" class="hidden">{{message.sender.id}}</p>
 <p id="replyUser" class="hidden">{{message.receiver_id}}</p>
 <div
               class='modal fade'
-              id='reply'
+              id='reply{{message.sender.id}}'
               tabindex='-1'
               aria-labelledby='replyLabel'
               aria-hidden='true'
             >
 
-              <form id='message-form' class='modal-dialog'>
+              <form id='message-form{{message.sender.id}}' class='modal-dialog'>
                 <div class='modal-content'>
                   <div class='modal-header'>
                     <h1 class='modal-title fs-5 message' id='exampleModalLabel'>Reply to {{message.sender.name}}</h1>
@@ -71,7 +72,7 @@
                       aria-label='Close'
                     ></button>
                   </div>
-                  <div class='modal-body message'>
+                  <div class='modal-body{{message.sender.id}} message'>
                     <div class='mb-3'>
                       <label
                         for='message-text'
@@ -106,4 +107,6 @@
   }
 </style>
 
+{{#if displayMessages.length}}
 <script src="/js/message-board.js"></script>
+{{/if}}
