--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,7 +17,7 @@
     <div class="form-group">
     <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">password</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control form-control-sm" id="user_password" placeholder="password">
+      <input type="password" class="form-control form-control-sm" id="user_password" placeholder="password">
     </div>
     <div class="form-group">
     <label for="colFormLabelSm" class="col-sm-2 col-form-label col-form-label-sm">Favorite food/snack</label>
