--- a/views/partials/user-details.handlebars
+++ b/views/partials/user-details.handlebars
@@ -66,7 +66,11 @@
                       class='btn btn-secondary'
                       data-bs-dismiss='modal'
                     >Close</button>
-                    <button type='submit' class='btn btn-primary'>Send message</button>
+                    <button
+                      id='sendbutton'
+                      type='submit'
+                      class='btn btn-primary'
+                    >Send message</button>
                   </div>
                 </div>
               </form>
