--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,6 +47,7 @@
             </li>
             <li class='nav-item'>
               <h4><a
+                  id='messageTab'
                   class='nav-link text-light'
                   href='/messages'
                 >Messages</a></h4>
@@ -85,6 +86,9 @@
       </div>
     </nav>
     {{{body}}}
+    {{#if logged_in}}
+      <p id='mainUserID' class='hidden'>{{user_id}}</p>
+    {{/if}}
     <script
       src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'
       integrity='sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN'
