--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -1,6 +1,6 @@
 
-  <div class="card-title d-flex justify-content-center card-body text-danger ">
-    <h3 class=" ">Welcome to Dating Portal</h3><br><br><br>
+  <div class="card-title d-flex justify-content-center card-body">
+    <h2 class="fancy purple-text">Welcome to the Dating Portal</h3><br><br><br>
   </div>
   <div class="card-text d-flex justify-content-center card-body text-danger ">
     <h5>Other users in <span id="currentLoc">{{location}}</span> that want <span id="currentEat">{{what_to_eat}}</span></h5><br><br><br>
