--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -13,7 +13,7 @@
       </div>
     {{else}}
       <div class='text-center'>
-        <a class='btn btn-danger btn-lg' href='/signup' role='button'>Sign Up
+        <a class='btn btn-danger btn-lg fancy-btn' href='/signup' role='button'>Sign Up
           Now</a>
       </div>
     {{/if}}
