--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,6 +11,9 @@
       integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
       crossorigin='anonymous'
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway:ital@1&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='/css/style.css' />
     <title>{{title}}</title>
   </head>
@@ -21,8 +24,8 @@
         <img
           src='/images/Love-hungry-1.png'
           alt='logo'
-          height='100'
-          width='100'
+          height='150'
+          width='150'
         />
         <a class='navbar-brand' href='#'></a>
         <button
@@ -40,29 +43,30 @@
           <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
             <li class='nav-item'>
               <h4><a
-                  class='nav-link active text-light'
+                  class='nav-link active text-light fancy'
                   aria-current='page'
                   href='/dating'
                 >Dating</a></h4>
             </li>
             <li class='nav-item'>
               <h4><a
-                  class='nav-link text-light'
+                  class='nav-link text-light fancy'
                   href='/messages'
                 >Messages</a></h4>
             </li>
             {{#if logged_in}}
               <li class='nav-item'>
                 <h4><a
-                    class='nav-link active text-light'
+                    class='nav-link active text-light fancy'
                     id='logout'
                     aria-current='page'
+                    href=""
                   >Logout</a></h4>
               </li>
             {{else}}
               <li class='nav-item'>
                 <h4><a
-                    class='nav-link active text-light'
+                    class='nav-link active text-light fancy'
                     aria-current='page'
                     href='/login'
                   >Login</a></h4>
