--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -73,7 +73,7 @@
               </li>
             {{/if}}
           </ul>
-          <form class='d-flex' role='search'>
+          {{!-- <form class='d-flex' role='search'>
             <input
               class='form-control me-2'
               type='search'
@@ -84,7 +84,7 @@
               class='btn btn-outline-success'
               type='submit'
             >Search</button>
-          </form>
+          </form> --}}
         </div>
       </div>
     </nav>
