--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,13 +21,14 @@
   <body>
     <nav class='navbar navbar-expand-lg' style='background-color: #C68CD9'>
       <div class='container-fluid'>
+        
+        <a class='navbar-brand' href='/'>
         <img
           src='/images/Love-hungry-1.png'
           alt='logo'
           height='150'
           width='150'
-        />
-        <a class='navbar-brand' href='#'></a>
+        /></a>
         <button
           class='navbar-toggler'
           type='button'
