--- a/views/partials/user-details.handlebars
+++ b/views/partials/user-details.handlebars
@@ -21,7 +21,7 @@
             <p class='card-text'><strong>Bio:</strong> {{date.bio}}</p>
             <button
               type='button'
-              class='btn btn-primary'
+              class='btn fancy-btn'
               data-bs-toggle='modal'
               data-bs-target='#exampleModal'
               data-bs-whatever='{{date.id}}'
@@ -69,7 +69,7 @@
                     <button
                       id='sendbutton'
                       type='submit'
-                      class='btn btn-primary'
+                      class='btn fancy-btn'
                     >Send message</button>
                   </div>
                 </div>
