--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,7 @@
-<h2> Please login or Sign up if you don't have an account</h2>
-<form id='login-form'>
-  <div class='form-group'>
-    <label for='email-login'>Email address</label>
+<h2 class="centered-text"> Please login or Sign up if you don't have an account</h2>
+<form id='login-form' class="">
+  <div class='form-group col-md-8 spaced'>
+    <label for='email-login spaced'>Email address</label>
     <input
       type='email'
       class='form-control'
@@ -12,7 +12,7 @@
     <small id='emailHelp' class='form-text text-muted'>We'll never share your
       email with anyone else.</small>
   </div>
-  <div class='form-group'>
+  <div class='form-group col-8 spaced'>
     <label for='password-login'>Password</label>
     <input
       type='password'
@@ -21,11 +21,11 @@
       placeholder='Password'
     />
   </div>
-  <button type='submit' class='btn btn-primary'>Submit</button>
+  <button type='submit' class='btn fancy-btn spaced'>Submit</button>
 </form>
 
 <h2> Not a member? </h2>
-<a class='btn btn-danger' href='/signup' role='button'>Sign up </a>
+<a class='btn fancy-btn spaced' href='/signup' role='button'>Sign up </a>
 
 <script src='/js/login.js'></script>
 
