--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,7 +57,7 @@
                   id='messageTab'
              
                   href='/messages'
-                >Messages</a></h4>
+                ><span id="messageText">Messages</span></a></h4>
             </li>
             {{#if logged_in}}
               <li class='nav-item'>
