--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -9,6 +9,11 @@
     {{> user-details}}
   </section>
   <section>
+
+<div class="card-text d-flex justify-content-center card-body text-danger">
+    <h5>Suggested {{what_to_eat}} Restaurants:</h5>
+  </div>
+
 {{!-- update preferences modal starts here --}}
  <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color:#8e39aa; border:#8e39aa">
