--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -13,7 +13,20 @@
 <div class="card-text d-flex justify-content-center card-body text-danger">
     <h5>Suggested {{what_to_eat}} Restaurants:</h5>
   </div>
-
+{{#each displayRestaurants as |restaurant|}}
+  <div class="card mb-3">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <div id="map{{restaurant.id}}" class="map"></div>
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{restaurant.dba}}</h5>
+          <p class="card-text">{{restaurant.building}} {{restaurant.street}}</p>
+        </div>
+      </div>
+    </div>
+    
 {{!-- update preferences modal starts here --}}
  <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color:#8e39aa; border:#8e39aa">
