comments out duplicate restaurant listings from dating page

--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -106,7 +106,7 @@
 </div>
 {{!-- update modal code over --}}
 
-    <div class="card-text d-flex justify-content-center card-body text-danger">
+    {{!-- <div class="card-text d-flex justify-content-center card-body text-danger">
       <h5 class="secondary-text">Suggested {{what_to_eat}} Restaraunts:</h5>
     </div>
     {{#each displayRestaurants as |restaurant|}}
@@ -126,7 +126,7 @@
     </div>
     {{/each}}
   </section><br><br>
- 
+  --}}
 
   <style>
     body{
