--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,13 +21,16 @@
       placeholder='Password'
     />
   </div>
-  <button type='submit' class='btn fancy-btn spaced'>Submit</button>
+  <button type='submit' class='btn fancy-btn spaced signup'>Submit</button>
 </form>
 
 <h2> Not a member? </h2>
-<a class='btn fancy-btn spaced' href='/signup' role='button'>Sign up </a>
+<a class='btn fancy-btn spaced signup' href='/signup' role='button'>Sign up </a>
 
 <script src='/js/login.js'></script>
+<script src="
+https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js
+"></script>
 
 <style>
     body{
