adds styling to messages page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 }
 .secondary-text {
   font-family: 'Raleway';
-  color: #8e39aa;
+  /* color: #8e39aa; */
 }
 .fancy-btn {
   background-color: #8e39aa;
