--- a/views/dating.handlebars
+++ b/views/dating.handlebars
@@ -9,6 +9,11 @@
 </section>
 <section>
 
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary justify-center" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color:#8e39aa; border:#8e39aa">
+  Get New Date Options
+</button>
+
 <div class="card-text d-flex justify-content-center card-body text-danger">
   <h5>Suggested {{what_to_eat}} Restaurants:</h5>
 </div>
@@ -61,10 +66,7 @@
 </script>
 
 {{!-- update preferences modal starts here --}}
- <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop" style="background-color:#8e39aa; border:#8e39aa">
-  Get New Date Options
-</button>
+ 
 
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
