--- a/views/message-board.handlebars
+++ b/views/message-board.handlebars
@@ -1,26 +1,26 @@
 <div class='container'>
 
-  <div class="card-title d-flex justify-content-center card-body git  text-light  ">
+  <div class="card-title d-flex justify-content-center card-body git purple-text">
     <h3>Message Board</h3>
   </div><br>
 
     <div class='col-md-4  text-light'>
-      <h5>Messages</h>
+      <h3 class="fancy">Messages</h3>
 
       {{#if displayMessages}}
       {{#each displayMessages as |message|}}
-      <div class='card mb-3'>
+      <div class='card mb-3 p-4'>
         <div class="message"class='card-body'>
-          <h5 class='card-title'>From: {{message.sender.name}} 
-          <p class='card-text'>"{{message.content}}"</p>
+          <h4 class='card-title fancy'>From: {{message.sender.name}} </h4>
+          <p class='card-text secondary-text'>"{{message.content}}"</p>
                     <button
               type='button'
-              class='btn btn-primary'
+              class='btn fancy-btn m-2'
               data-bs-toggle='modal'
               data-bs-target='#reply'
               data-bs-whatever='{{message.sender.id}}'
             >Reply to {{message.sender.name}}</button> <br>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#profileModal{{message.sender.id}}">
+        <button type="button" class="btn fancy-btn" data-bs-toggle="modal" data-bs-target="#profileModal{{message.sender.id}}">
   View {{message.sender.name}}'s Profile
 </button>   
 </div>    
@@ -92,7 +92,7 @@
                       class='btn btn-secondary message'
                       data-bs-dismiss='modal'
                     >Close</button>
-                    <button id="sendmessage" type='submit' class='btn btn-primary'>Send message</button>
+                    <button id="sendmessage" type='submit' class='btn fancy-btn'>Send message</button>
                   </div>
                 </div>
               </form>
