--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -101,7 +101,7 @@
     <div class='col-md-4'>
       <img
         class='homepageimg2'
-        src='/images/nakazawa.png'
+        src='/images/nakazawa2.png'
         alt='attractive model'
       />
       <p></p>
