--- a/views/message-board.handlebars
+++ b/views/message-board.handlebars
@@ -6,43 +6,43 @@
 
         {{#if displayMessages}}
         {{#each displayMessages as |message|}}
-  <section class="row">
-    <div class="col-md-6">
-      <div class="card mb-3 justify-content-center dflex">
-        <div class="row no-gutters">
-          <div class="col-md-2">
-            <img src="{{message.sender.profile_pic}}" class="card-img" alt="{{message.sender.name}}">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 id="dateName{{date.id}}" class="card-title">{{message.sender.name}}</h5>
-              <p class="card-text"><strong>Gender:</strong> {{message.sender.gender}}</p>
-              <p class="card-text"><strong>Age:</strong> {{calculate_age message.sender.birthday}}</p>
-              <p class="card-text"><strong>Zodiac Sign:</strong> {{message.sender.zodiac}}</p>
-              <p class="card-text"><strong>Bio:</strong> {{message.sender.bio}}</p>
-            </div>
+<section class="row">
+  <div class="col-md-6 mt-3">
+    <div class="card mb-3 justify-content-center dflex">
+      <div class="row no-gutters">
+        <div class="col-md-2">
+          <img src="{{message.sender.profile_pic}}" class="card-img" alt="{{message.sender.name}}">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 id="dateName{{date.id}}" class="card-title">{{message.sender.name}}</h5>
+            <p class="card-text"><strong>Gender:</strong> {{message.sender.gender}}</p>
+            <p class="card-text"><strong>Age:</strong> {{calculate_age message.sender.birthday}}</p>
+            <p class="card-text"><strong>Zodiac Sign:</strong> {{message.sender.zodiac}}</p>
+            <p class="card-text"><strong>Bio:</strong> {{message.sender.bio}}</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
     
-    <div class="col-md-6">
-      <div class="card mb-3 p-4 dflex">
-        <div class="message card-body">
-          <h4 class="card-title fancy">From: {{message.sender.name}}</h4>
-          <h4 class="card-title fancy">Sent: {{format_time message.createdAt}}</h4>
-          <p class="card-text secondary-text">"{{message.content}}"</p>
-          <button type="button" class="btn fancy-btn m-2" data-bs-toggle="modal" data-bs-target="#reply" data-bs-whatever="{{message.sender.id}}">
-            Reply to {{message.sender.name}}
-          </button>
-          <br>
-          <button type="button" class="btn fancy-btn" data-bs-toggle="modal" data-bs-target="#profileModal{{message.sender.id}}">
-            View {{message.sender.name}}'s Profile
-          </button>
-        </div>
+  <div class="col-md-6">
+    <div class="card mb-3 p-4 dflex">
+      <div class="message card-body">
+        <h4 class="card-title fancy">From: {{message.sender.name}}</h4>
+        <h4 class="card-title fancy">Sent: {{format_time message.createdAt}}</h4>
+        <p class="card-text secondary-text">"{{message.content}}"</p>
+        <button type="button" class="btn fancy-btn m-2" data-bs-toggle="modal" data-bs-target="#reply" data-bs-whatever="{{message.sender.id}}">
+          Reply to {{message.sender.name}}
+        </button>
+        <br>
+        <button type="button" class="btn fancy-btn" data-bs-toggle="modal" data-bs-target="#profileModal{{message.sender.id}}">
+          View {{message.sender.name}}'s Profile
+        </button>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 
       </div><br>
