--- a/views/message-board.handlebars
+++ b/views/message-board.handlebars
@@ -30,7 +30,7 @@
     <div class="card mb-3 p-4 dflex">
       <div class="message card-body">
         <h4 class="card-title fancy">From: {{message.sender.name}}</h4>
-        <h4 class="card-title fancy">Sent: {{format_time message.createdAt}}</h4>
+        <p class="card-title secondary-text" style="font-size: smaller;">Sent: {{format_time message.createdAt}}</p>
         <p class="card-text secondary-text">"{{message.content}}"</p>
         <button type="button" class="btn fancy-btn m-2" data-bs-toggle="modal" data-bs-target="#reply" data-bs-whatever="{{message.sender.id}}">
           Reply to {{message.sender.name}}
