fixes avatar overlapping text in message card profile

--- a/views/message-board.handlebars
+++ b/views/message-board.handlebars
@@ -9,11 +9,11 @@
 <section class="row">
   <div class="col-md-6 mt-3">
     <div class="card mb-3 justify-content-center dflex">
-      <div class="row no-gutters">
-        <div class="col-md-2">
+      <div class="row no-gutters p-2">
+        <div class="col-md-2 p-1">
           <img src="{{message.sender.profile_pic}}" class="card-img" alt="{{message.sender.name}}">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 m-2">
           <div class="card-body">
             <h5 id="dateName{{date.id}}" class="card-title">{{message.sender.name}}</h5>
             <p class="card-text"><strong>Gender:</strong> {{message.sender.gender}}</p>
